Shang New Live/src/objects/Request__c.object
<CustomObject>
    <fields>
        <fullName>AWS_Id__c</fullName>
        <label>AWS Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action_Remarks__c</fullName>
        <label>Action Remarks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Backend_Last_Updated_DateTime__c</fullName>
        <label>Backend Last Updated DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Case_Origin__c</fullName>
        <label>Case Origin</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Checklist_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Checklist Master</label>
        <referenceTo>Checklist_Master__c</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Checklist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Checklist</label>
        <referenceTo>Checklist__c</referenceTo>
        <relationshipName>Work_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Time_Closed__c</fullName>
        <label>Date/Time Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Opened__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Date/Time Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Dept_in_Charge__c</fullName>
        <label>Dept in Charge</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Department</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Equipment_Service_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Equipment Service Contract</label>
        <referenceTo>Equipment_Service_Contract__c</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Equipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Equipment</label>
        <referenceTo>Equipment__c</referenceTo>
        <relationshipName>Work_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Update_Date_Time__c</fullName>
        <label>Last Update Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Update_Date_Time_c__c</fullName>
        <label>Last Updated Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Updated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Updated By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Requests (Last Updated By)</relationshipLabel>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Updated_From__c</fullName>
        <label>Last Updated From</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>App</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipName>Work_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mobile_Display__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Mobile Display</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notifed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notifed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Person_In_Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Person In-Charge</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordType.Name</field>
                <operation>equals</operation>
                <value>Staff</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Case_Request2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Planned_Maintenance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Planned Maintenance</label>
        <referenceTo>Planned_Maintenance__c</referenceTo>
        <relationshipName>Work_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_Name_Text__c</fullName>
        <description>This field is populated by W/F rule.</description>
        <inlineHelpText>This field is populated by W/F rule.</inlineHelpText>
        <label>Property Name Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipName>Work_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Maintainance</fullName>
                </value>
                <value>
                    <fullName>Complex functionality</fullName>
                </value>
                <value>
                    <fullName>Existing problem</fullName>
                </value>
                <value>
                    <fullName>New problem</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Origin__c</fullName>
        <label>Request Origin</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>CS Counter</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Job_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requested_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please select Staff Name</inlineHelpText>
        <label>Requested By</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordType.Name</field>
                <operation>equals</operation>
                <value>Staff</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Case_Request1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requested_Completion_Date__c</fullName>
        <label>Requested Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Serving_Description__c</fullName>
        <label>Serving Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <label>Severity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shopper_Email__c</fullName>
        <label>Shopper Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Shopper_Name__c</fullName>
        <label>Shopper Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shopper_Phone__c</fullName>
        <label>Shopper Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>KIV (monitoring)</fullName>
                </value>
                <value>
                    <fullName>Escalated</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team</label>
        <referenceTo>Action_Taker__c</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tenant_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tenant Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Tenant__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Case_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tenant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tenant</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Case_Request1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ad-hoc</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_Request_Date__c</fullName>
        <label>Work Request Date</label>
        <type>Date</type>
    </fields>
    <label>Request</label>
    <listViews>
        <fullName>AllMobileRequests</fullName>
        <columns>NAME</columns>
        <columns>Property__c</columns>
        <columns>Requested_By__c</columns>
        <columns>Person_In_Charge__c</columns>
        <columns>Description__c</columns>
        <columns>Status__c</columns>
        <columns>Severity__c</columns>
        <columns>Date_Time_Opened__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>-MQ-</value>
        </filters>
        <label>All Mobile Requests</label>
    </listViews>
    <listViews>
        <fullName>AllRequests</fullName>
        <columns>NAME</columns>
        <columns>Property__c</columns>
        <columns>Description__c</columns>
        <columns>Status__c</columns>
        <columns>Severity__c</columns>
        <columns>Date_Time_Opened__c</columns>
        <columns>Requested_By__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Person_In_Charge__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Property__c</field>
            <operation>notContain</operation>
            <value>Training</value>
        </filters>
        <label>All Requests</label>
    </listViews>
    <listViews>
        <fullName>AllTrainingMall</fullName>
        <columns>NAME</columns>
        <columns>Property__c</columns>
        <columns>Type__c</columns>
        <columns>Date_Time_Opened__c</columns>
        <columns>Description__c</columns>
        <columns>Status__c</columns>
        <columns>Severity__c</columns>
        <columns>Person_In_Charge__c</columns>
        <columns>Requested_By__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Property__c</field>
            <operation>contains</operation>
            <value>Training</value>
        </filters>
        <label>All Training Mall</label>
    </listViews>
    <listViews>
        <fullName>OpenRequests</fullName>
        <columns>NAME</columns>
        <columns>Property__c</columns>
        <columns>Description__c</columns>
        <columns>Status__c</columns>
        <columns>Severity__c</columns>
        <columns>Date_Time_Opened__c</columns>
        <columns>Requested_By__c</columns>
        <columns>Person_In_Charge__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Person_In_Charge__c</field>
            <operation>equals</operation>
        </filters>
        <label>Open Requests</label>
    </listViews>
    <listViews>
        <fullName>RequestsAssignedToATS</fullName>
        <columns>NAME</columns>
        <columns>Property__c</columns>
        <columns>Description__c</columns>
        <columns>Status__c</columns>
        <columns>Severity__c</columns>
        <columns>Date_Time_Opened__c</columns>
        <columns>Requested_By__c</columns>
        <columns>Person_In_Charge__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Person_In_Charge__c</field>
            <operation>equals</operation>
            <value>Aye Thi San</value>
        </filters>
        <filters>
            <field>Person_In_Charge__c</field>
            <operation>equals</operation>
        </filters>
        <label>Requests Assigned To ATS</label>
    </listViews>
    <listViews>
        <fullName>RequestsAssignedToWG</fullName>
        <columns>NAME</columns>
        <columns>Property__c</columns>
        <columns>Description__c</columns>
        <columns>Status__c</columns>
        <columns>Severity__c</columns>
        <columns>Date_Time_Opened__c</columns>
        <columns>Requested_Completion_Date__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Requested_By__c</columns>
        <columns>Person_In_Charge__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Person_In_Charge__c</field>
            <operation>contains</operation>
            <value>WG</value>
        </filters>
        <filters>
            <field>Property__c</field>
            <operation>notContain</operation>
            <value>Training Mall</value>
        </filters>
        <label>Requests Assigned To WG</label>
    </listViews>
    <listViews>
        <fullName>Today_s_Request</fullName>
        <columns>NAME</columns>
        <columns>Property__c</columns>
        <columns>Description__c</columns>
        <columns>Status__c</columns>
        <columns>Severity__c</columns>
        <columns>Date_Time_Opened__c</columns>
        <columns>Requested_By__c</columns>
        <columns>Person_In_Charge__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Request</label>
    </listViews>
    <listViews>
        <fullName>UnassignedRequests</fullName>
        <columns>NAME</columns>
        <columns>Property__c</columns>
        <columns>Type__c</columns>
        <columns>Date_Time_Opened__c</columns>
        <columns>Description__c</columns>
        <columns>Status__c</columns>
        <columns>Severity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Person_In_Charge__c</field>
            <operation>equals</operation>
        </filters>
        <label>Unassigned Requests</label>
    </listViews>
    <nameField>
        <label>Request ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>